--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "aos": "^2.3.4",
     "next": "^15.4.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
